deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ht-video-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ht-video-api
  template:
    metadata:
      labels:
        app: ht-video-api
    spec:
      containers:
      - name: ht-video-api
        image: brunobucci/ht-video-api:latest
        ports:
        - containerPort: 8080
