ht-video-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ht-video-api
  labels:
    app: ht-video-api
spec:
  replicas: 1  # Inicialmente, sobe apenas 1 pod
  selector:
    matchLabels:
      app: ht-video-api
  template:
    metadata:
      labels:
        app: ht-video-api
    spec:
      containers:
        - name: ht-video-api
          image: brunobucci/ht-video-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"  # 0.25 vCPU de CPU inicial
              memory: "512Mi"
            limits:
              cpu: "500m"  # 0.5 vCPU máximo por pod
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: ht-video-api-service
spec:
  selector:
    app: ht-video-api
  ports:
    - protocol: TCP
      port: 8081        # Porta do serviço no Kubernetes
      targetPort: 8081   # Porta onde o Spring Boot está rodando no pod
      nodePort: 30081    # Porta fixa para expor externamente
  type: NodePort
