service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ht-video-api
spec:
  selector:
    app: ht-video-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
