ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ht-video-api-ingress
spec:
  rules:
    - host: ht-video-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ht-video-api-service
                port:
                  number: 8081
